--- a/week1-intro/imageClassification-ml5/Homework/index.html
+++ b/week1-intro/imageClassification-ml5/Homework/index.html
@@ -20,7 +20,7 @@
 
    $(document).ready(function(){
 
-    $.getJSON("http://api.flickr.com/services/feeds/photos_public.gne?jsoncallback=?",
+    $.getJSON("https://api.flickr.com/services/feeds/photos_public.gne?jsoncallback=?",
     {
       tags: keyword,
       tagmode: "any",
